@@ -1,4 +1,7 @@
 HEAD
+	+ Decode givenName, sn and description before propagating it from OpenLDAP
+	  to Samba so it doesn't fail due to encoding issues
+	  (https://projects.zentyal.com/issues/6582).
 	+ Don't put duplicate bridge interfaces in smb.conf
 	+ Don't allow a share with file system root as path
 	+ Explicitly set firewall version dependency in control file
